# mikrorobot

./: .#setupguide.txt  .gitignore  CMakeLists.txt  CMakeLists.txt~  Mosfet H-Bridge.b#1  Mosfet H-Bridge.cmp  Mosfet H-Bridge.dpv  Mosfet H-Bridge.dri  Mosfet H-Bridge.gpi  Mosfet H-Bridge.sol  README.md  installing_orb_slam.txt  macsetup.sh  notes.txt  package.xml  setup.sh  setupguide.txt
PCBData/: Mosfet H-Bridge.brd  Mosfet H-Bridge.drd  Mosfet H-Bridge.plc  Mosfet H-Bridge.stc  Mosfet H-Bridge.sts
RaspberryPi/: bootupscript.sh
arduino/Mikrobot_arduino_motorshield_0_3/: Mikrobot_arduino_motorshield_0_3.ino
arduino/Mikrobot_arduino_motorshield_0_4/: Mikrobot_arduino_motorshield_0_4.ino
arduino/_4_motorsdecoder/: _4_motorsdecoder.ino
arduino/encoder_emulator/encoder_emulator/: encoder_emulator.ino
arduino/encoder_test/encoder_test/: encoder_test.ino
arduino/encoders_1.0/encoders_1_0/: encoders_1_0.ino
arduino/encoders_1_0/: encoders_1_0.ino
arduino/imu/mpu9150/: mpu9150.ino
arduino/motor_control/: motor_control.ino
arduino/motor_control/base_controller/: base_controller.ino
arduino/mpu/: defs.h  mpu.ino
arduino/pid_controller/pid_controller/: pid_controller.ino
arduino/pid_controllers_1_0/: pid_controllers_1_0.ino
arduino/robot_light/: robot_light.ino
arduino/ros_servo_control/: ros_servo_control.ino
arduino/ros_servo_control_example/: ros_servo_control_example.ino
control/: mikrorobot_control.yaml
launch/: camerafeed_and_keyboard_control_on_robot.launch  camerafeed_and_keyboard_control_on_robot_in_gazebo.launch  compressed_image_view.launch  core_functionality.launch  core_functionality_test.launch  gazebo.launch  gazebo_test.launch  mikrorobot.launch  mikrorobot_jetson.launch  mikrorobot_state_publisher.launch  move_base.launch  navigation_stack.launch  orb_slam_basic_on_robot.launch  orb_slam_on_laptop_with_map_saving.launch  orb_slam_with_map_saving_on_laptop.launch  orb_slam_with_urdf_model_on_laptop.launch  orb_slam_with_urdf_model_on_robot.launch  ros_servo_control_example.launch  sensorPI.launch  state_publisher_node.launch  teleop_joy.launch  test_launch.launch  two_arduinos.launch
navconfig/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  ouya_joy.config.yaml
nodes/: .#node_template.py  base_controller.py  base_controller_emulator.py  cmd_vel_emulator.py  commandline_servo_control.py  commandline_servo_control_example.py  imu_converter.py  motor_speed_converter.py  node_template.py  odom.py  patrol.py
rviz/: mikrorobot.rviz  orb_slam_with_model.rviz
scripts/: base_controller.py  exploration_action_client.py  getch.py  keyboard_teleop.py  mikrobot_tf_broadcaster.cpp  odom.py
src/: image_converter.cpp  maskinsyn_aruco.cpp  mikrobot_tf_broadcaster.cpp  mikrorobot_tf_broadcaster.cpp
urdf/: README.txt  frames.gv  mikrobot.gazebo  mikrobot.urdf  mikrorobot.gazebo  mikrorobot.urdf  mikrorobot.xacro  mikrorobot_from_xacro.urdf
